--- a/src/main/resources/view/fxml/screen/NewVanillaInstance.fxml
+++ b/src/main/resources/view/fxml/screen/NewVanillaInstance.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.201-ea"
-            fx:controller="com.github.franckyi.emerald.controller.NewVanillaInstanceController">
+            fx:controller="com.github.franckyi.emerald.controller.screen.NewVanillaInstanceController">
     <top>
         <JFXToolbar BorderPane.alignment="CENTER" styleClass="menu-header">
             <left>
@@ -18,7 +18,7 @@
                 </JFXRippler>
             </left>
             <center>
-                <Label text="Create new Vanilla instance" BorderPane.alignment="CENTER"/>
+                <Label text="Create new Vanilla instance" BorderPane.alignment="CENTER_LEFT"/>
             </center>
             <right>
                 <JFXRippler onMouseClicked="#homeAction" BorderPane.alignment="CENTER"
