Added login system, launcher now works on Linux

--- a/src/main/resources/view/css/dark.css
+++ b/src/main/resources/view/css/dark.css
@@ -10,6 +10,7 @@
     -primary: rgb(187, 134, 252);
 
     -text-color: -white;
+    -text-color-variant: rgba(255, 255, 255, 0.7);
     -button-text-color: -white;
     -background-color: -dark1;
     -surface-color: -dark2;
