--- a/src/main/resources/view/css/light.css
+++ b/src/main/resources/view/css/light.css
@@ -4,6 +4,7 @@
     -primary-background: rgba(98, 0, 238, 0.12);
 
     -text-color: -black;
+    -text-color-variant: rgba(0, 0, 0, 0.7);
     -button-text-color: -primary;
     -background-color: -white;
     -surface-color: -white;
