--- a/src/main/resources/view/fxml/dialog/AboutDialog.fxml
+++ b/src/main/resources/view/fxml/dialog/AboutDialog.fxml
@@ -25,7 +25,7 @@
             </VBox>
         </body>
         <actions>
-            <JFXButton onAction="#closeDialogAction" styleClass="dialog-close">CLOSE</JFXButton>
+            <JFXButton onAction="#close" styleClass="dialog-close">CLOSE</JFXButton>
         </actions>
     </JFXDialogLayout>
 </JFXDialog>
